Style fixes to minimize appearence of scrollbars

--- a/src/app/core/launcher/launcher.component.css
+++ b/src/app/core/launcher/launcher.component.css
@@ -63,8 +63,7 @@
 }
 .apps-container {
     flex: 1;
-    overflow-x: scroll;
-    overflow-y: hidden;
+    overflow: hidden;
     white-space: nowrap;
 }
 .apps {
