--- a/src/app/screenlock-app/screenlock-app/screenlock-app.component.css
+++ b/src/app/screenlock-app/screenlock-app/screenlock-app.component.css
@@ -20,7 +20,7 @@
     flex: 1;
     box-sizing: border-box;
     padding: 10px;
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
     max-width: 700px;
     margin: 0 auto;
